# take_pictures_by_self

./: CMakeLists.txt  README.md  package.xml
launch/: tpbs.launch
script/: arm_task.py  save_img.py  take_pictures_by_self.py
